more linting work