@@ -7,7 +7,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Implements the logic of the device order logic puzzle.
@@ -37,7 +36,7 @@ public class DeviceOrderLogic {
      */
     public void initDevices() {
         allDevices = Arrays.stream(FXGL.getAssetLoader().loadJSON(Config.DEVICES_JSON_PATH, DeviceOrderDevice[].class)
-                .get()).collect(Collectors.toList());
+                .orElse(new DeviceOrderDevice[]{})).toList();
 
         devices = new ArrayList<>(allDevices);
         Collections.shuffle(devices);
@@ -46,7 +45,7 @@ public class DeviceOrderLogic {
     }
 
     public boolean isDeviceOrderDone() {
-        return !(roundsLeft > 0);
+        return roundsLeft <= 0;
     }
 
     /**
